--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanye Zone</title>
 </head>
-<body> 
+<body id="body"> 
     <div style="display: flex; justify-content: center; align-items: center; height: 100%; width: 100%; position: absolute; margin: 0px; padding: 0px;">
         <canvas width="100" height="100" id="canvas" style="background-color: #2b2b37; transition: 3s; ">
             
@@ -91,7 +91,7 @@
 
     function init()
     {
-        canvas.width = window.innerWidth = 500
+        canvas.width = window.innerWidth
         canvas.height = window.innerHeight
 
         document.getElementById('mainContainer').style.width = 500 + 'px'
@@ -102,6 +102,7 @@
 
         update()
 
+        document.getElementById('body').setAttribute('onclick', "{document.getElementById('body').requestFullscreen(); screen.orientation.lock('landscape'); document.getElementById('body').setAttribute('onclick', '')}; canvas.width = window.innerWidth; canvas.height = window.innerHeight" )
 
         headImg.src = './assets/head.png'
         handImg.src = './assets/hand.png'
