--- a/index.html
+++ b/index.html
@@ -564,11 +564,16 @@
 </html>
 
 <style>
+    @font-face{
+        font-family: Jua;
+        src: url(/Assets/Fonts/Jua-Regular.ttf);
+    }
     body{
         margin: 0px;
         padding: 0px;
         overflow: hidden;
         background-color: #48485f;
+        font-family: Jua;
     }
 </style>
 
