--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div id="WinGameScreen" style="position: absolute; display: none; justify-content: center; align-items: center; flex-direction: column; background-color: white;; ">
             <img src="https://w-plus-k.netlify.app/assets/winHead.png" style="width: 400px; height: 300px;">
-            <img id="winTxt" onclick="window.open('https://mattchong.squarespace.com/a-love-letter-to-wk', '_blank') " src="/assets/winTxt.png" style="width: 400px; height: 50px; cursor: pointer; margin-top: 30px; transition: 0.5; opacity: 0;">
+            <img id="winTxt" onclick="window.open('https://mattchong.squarespace.com/a-love-letter-to-wk', '_blank') " src="https://w-plus-k.netlify.app/assets/winTxt.png" style="width: 400px; height: 50px; cursor: pointer; margin-top: 30px; transition: 0.5; opacity: 0;">
         </div>
 
 
