--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>W+K</title>
 </head>
 <body id="body"> 
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh; width: 100vw; position: absolute; margin: 0px; padding: 0px;">
-        <div style="width: 720px; height: 1280px;">
+    <div style="display: flex; justify-content: center; align-items: center; height: 100%; width: 100%; position: absolute; margin: 0px; padding: 0px;">
+        <div style="width: 100%; height: 100%;">
             <canvas width="720px" height="1280px" id="canvas" style="background-color: white; transition: 3s; ">
                 
             </canvas>
@@ -114,13 +114,13 @@
 
     const hostURL = 'https://w-plus-k.netlify.app'
 
-    // document.getElementById('body').setAttribute('onclick', "{document.getElementById('body').requestFullscreen(); screen.orientation.lock('landscape'); document.getElementById('body').setAttribute('onclick', '')};" )
+    document.getElementById('body').setAttribute('onclick', "{document.getElementById('body').requestFullscreen(); screen.orientation.lock('landscape'); document.getElementById('body').setAttribute('onclick', '')}; canvas.width = window.innerWidth; canvas.height = window.innerHeight;" )
 
 
     function init()
     {
-        // canvas.width = window.innerWidth
-        // canvas.height = window.innerHeight
+        canvas.width = window.innerWidth
+        canvas.height = window.innerHeight
 
         document.getElementById('mainContainer').style.width = innerWidth + 'px'
         document.getElementById('mainContainer').style.height = innerHeight + 'px'
@@ -580,8 +580,8 @@
 
     function loadGameIntro()
     {
-        // canvas.width = innerWidth
-        // canvas.height = innerHeight
+        canvas.width = innerWidth
+        canvas.height = innerHeight
 
         cWidth = canvas.width
         cHeight = canvas.height
@@ -684,8 +684,8 @@
 
 
         addEventListener('resize', (event) => {
-            // canvas.width = innerWidth
-            // canvas.height = innerHeight
+            canvas.width = innerWidth
+            canvas.height = innerHeight
 
             cWidth = canvas.width
             cHeight = canvas.height
@@ -726,8 +726,8 @@
         overflow: hidden;
         background-color: rgb(184, 184, 184); /* #48485f */ 
         font-family: Jua;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
     }
 </style>
 
