--- a/index.html
+++ b/index.html
@@ -195,14 +195,23 @@
         // alert('Test 1') // cleard
         if(nikePowerActivated) 
         {
-            ctx.drawImage(nikeHeadImg, centerX-30, centerY-55, 60, 110)
-            circleMoveSpeed = 5 * 1.3
+            nikeHeadImg.onload = function()
+            {
+                ctx.drawImage(nikeHeadImg, centerX-30, centerY-55, 60, 110)
+                circleMoveSpeed = 5 * 1.3
+            }
 
         }else if(amazonPowerActivated){
-            ctx.drawImage(amazonHeadImg, centerX-55, centerY-55, 110, 110)
+            amazonHeadImg.onload = function()
+            {
+                ctx.drawImage(amazonHeadImg, centerX-55, centerY-55, 110, 110)
+            }
         }else{
-            circleMoveSpeed = 5 
-            ctx.drawImage(headImg, centerX-55, centerY-55, 110, 110)
+            circleMoveSpeed = 5
+            headImg.onload = function()
+            {
+                ctx.drawImage(headImg, centerX-55, centerY-55, 110, 110)
+            }
         }
 
         // Draw the ring
@@ -223,9 +232,15 @@
         // ctx.arc(centerX, centerY, 75, 8/2, Math.PI * 2);
         if(nikePowerActivated)
         {
-            ctx.drawImage(nikeHandImg, centerX-(110/2), centerY-150, 110, 60)
+            nikeHandImg.onload = function()
+            {
+                ctx.drawImage(nikeHandImg, centerX-(110/2), centerY-150, 110, 60)
+            }
         }else{
-            ctx.drawImage(handImg, centerX-(75/2), centerY-150, 75, 80)
+            handImg.onload = function()
+            {
+                ctx.drawImage(handImg, centerX-(75/2), centerY-150, 75, 80)
+            }
         }
         ctx.strokeStyle = '#c6605c';
         ctx.lineWidth = 5;
@@ -397,11 +412,17 @@
                 this.readyToMove = true
                 if(this.letter == 'Amazon')
                 {
-                    ctx.drawImage(amazonImg, this.posX, this.posY, 100, 70)
+                    amazonImg.onload = function()
+                    {
+                        ctx.drawImage(amazonImg, this.posX, this.posY, 100, 70)
+                    }
                 }
                 if(this.letter == 'Nike')
                 {
-                    ctx.drawImage(nikeImg, this.posX, this.posY, 50, 20)
+                    nikeImg.onload = function()
+                    {
+                        ctx.drawImage(nikeImg, this.posX, this.posY, 50, 20)
+                    }
                 }
             }else{
                 ctx.font = "30px LomoCopy";
