--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
     var isRunning = true
     var flyingLetters = []
 
-    var headImg = document.createElement('img');
-    var handImg = document.createElement('img');
-    var nikeHeadImg = document.createElement('img');
-    var nikeHandImg = document.createElement('img')
-    var amazonHeadImg = document.createElement('img')
+    var headImg = new Image();
+    var handImg = new Image();
+    var nikeHeadImg = new Image();
+    var nikeHandImg = new Image()
+    var amazonHeadImg = new Image()
 
-    var nikeImg = document.createElement('img');
-    var amazonImg = document.createElement('img');
+    var nikeImg = new Image();
+    var amazonImg = new Image();
 
-    var letterImg = document.createElement('img');
+    var letterImg = new Image();
 
     var nikePowerActivated = false
     var amazonPowerActivated= false
