--- a/index.html
+++ b/index.html
@@ -195,20 +195,20 @@
         // alert('Test 1') // cleard
         if(nikePowerActivated) 
         {
-            nikeHeadImg.onload = function()
+            if(nikeHandImg.complete)
             {
                 ctx.drawImage(nikeHeadImg, centerX-30, centerY-55, 60, 110)
                 circleMoveSpeed = 5 * 1.3
             }
 
         }else if(amazonPowerActivated){
-            amazonHeadImg.onload = function()
+            if(amazonHeadImg.complete)
             {
                 ctx.drawImage(amazonHeadImg, centerX-55, centerY-55, 110, 110)
             }
         }else{
             circleMoveSpeed = 5
-            headImg.onload = function()
+            if(headImg.complete)
             {
                 ctx.drawImage(headImg, centerX-55, centerY-55, 110, 110)
             }
@@ -232,12 +232,12 @@
         // ctx.arc(centerX, centerY, 75, 8/2, Math.PI * 2);
         if(nikePowerActivated)
         {
-            nikeHandImg.onload = function()
+            if(nikeHandImg.complete)
             {
                 ctx.drawImage(nikeHandImg, centerX-(110/2), centerY-150, 110, 60)
             }
         }else{
-            handImg.onload = function()
+            if(handImg.complete)
             {
                 ctx.drawImage(handImg, centerX-(75/2), centerY-150, 75, 80)
             }
@@ -412,14 +412,14 @@
                 this.readyToMove = true
                 if(this.letter == 'Amazon')
                 {
-                    amazonImg.onload = function()
+                    if(amazonImg.complete)
                     {
                         ctx.drawImage(amazonImg, this.posX, this.posY, 100, 70)
                     }
                 }
                 if(this.letter == 'Nike')
                 {
-                    nikeImg.onload = function()
+                    if(nikeImg.complete)
                     {
                         ctx.drawImage(nikeImg, this.posX, this.posY, 50, 20)
                     }
