--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     ctx.drawImage(headImg, centerX-55, centerY-55, 110, 110)
                 }catch (e){
                     console.log('error: ' + e)
-                    ctx.drawImage(headImg, centerX, centerY, 300, 300)
+                    ctx.drawImage(headImg, centerX, centerY, headImg.width, headImg.height)
                 }
             }
         }
