--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
             <img onclick="loadInstructions()"  id="playTxt" src="https://w-plus-k.netlify.app/assets/playTxt.png" style="width: 150px; bottom: 120px; transition: 2s; cursor: pointer; position: absolute;">
             
-            <img id="i1" src="https://w-plus-k.netlify.app/assets/instructions1.png" style="width: 450px; transition: 2s; display: none;">
+            <img id="i1" src="https://w-plus-k.netlify.app/assets/pressandhold.png" style="width: 450px; transition: 2s; display: none;">
 
-            <img id="i2" src="https://w-plus-k.netlify.app/assets/instructions5.png" style="width: 250px; transition: 2s; position: relative; top: 1000px; margin-top: 60px; opacity: 0;">
+            <img id="i2" src="https://w-plus-k.netlify.app/assets/newpinkinstructions.png" style="width: 250px; transition: 2s; position: relative; top: 1000px; margin-top: 60px; opacity: 0;">
 
             <img id="i3" src="https://w-plus-k.netlify.app/assets/instructions3.png" style="width: 250px; transition: 2s; position: relative; top: 1000px; margin-top: 30px; opacity: 0;">
 
